// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQL importer regression goldens > parses exported MySQL DDL identically 1`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "SET NULL",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_invoices_with_a_rather_long_table_name_customers_1",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "RESTRICT",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "NO ACTION",
      "endFieldId": 1,
      "endTableId": 0,
      "id": 1,
      "name": "fk_invoice_customer_code",
      "startFieldId": 2,
      "startTableId": 1,
      "updateConstraint": "CASCADE",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 1,
      "id": 2,
      "name": "fk_invoice_lines_invoices_with_a_rather_long_table_name_3",
      "startFieldId": 0,
      "startTableId": 2,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "SMALLINT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "code",
          "notNull": true,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": true,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "Shown "as is"",
          "default": "O'Brien",
          "id": 2,
          "increment": false,
          "name": "display_name",
          "notNull": false,
          "primary": false,
          "size": "5000",
          "type": "VARCHAR",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "bio",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TINYTEXT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 4,
          "increment": false,
          "name": "avatar",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TINYBLOB",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 5,
          "increment": false,
          "name": "hash",
          "notNull": false,
          "primary": false,
          "size": "32",
          "type": "BINARY",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "-1.5",
          "id": 6,
          "increment": false,
          "name": "score",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "DOUBLE",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 7,
          "increment": false,
          "name": "ratio",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "FLOAT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 8,
          "increment": false,
          "name": "born_at",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "DATETIME",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 9,
          "increment": false,
          "name": "alarm",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TIME",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "false",
          "id": 10,
          "increment": false,
          "name": "flag",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "BIT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "now()",
          "id": 11,
          "increment": false,
          "name": "last_seen",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "NULL",
          "id": 12,
          "increment": false,
          "name": "legacy_id",
          "notNull": false,
          "primary": false,
          "size": "11",
          "type": "INT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "silver",
          "id": 13,
          "increment": false,
          "name": "tier",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "ENUM",
          "unique": false,
          "values": [
            "gold",
            "silver",
            "it's",
          ],
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 14,
          "increment": false,
          "name": "role",
          "notNull": true,
          "primary": false,
          "size": "255",
          "type": "VARCHAR",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 15,
          "increment": false,
          "name": "doc",
          "notNull": false,
          "primary": false,
          "size": "255",
          "type": "VARCHAR",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 16,
          "increment": false,
          "name": "balance",
          "notNull": false,
          "primary": false,
          "size": "10,0",
          "type": "DECIMAL",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 17,
          "increment": false,
          "name": "since",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "YEAR",
          "unique": false,
          "values": undefined,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "display_name",
            "born_at",
          ],
          "id": 0,
          "name": "\`idx_customers_name_born\`",
          "unique": false,
        },
        {
          "fields": [
            "hash",
          ],
          "id": 1,
          "name": "\`uq_customers_hash\`",
          "unique": true,
        },
      ],
      "name": "customers",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INTEGER",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "customer_id",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "SMALLINT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "customer_code",
          "notNull": false,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "total",
          "notNull": false,
          "primary": false,
          "size": "14,4",
          "type": "NUMERIC",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "draft",
          "id": 4,
          "increment": false,
          "name": "state",
          "notNull": false,
          "primary": false,
          "size": "20",
          "type": "VARCHAR",
          "unique": false,
          "values": undefined,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "invoices_with_a_rather_long_table_name",
      "x": 260,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": false,
          "name": "invoice_id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INTEGER",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "line_no",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "free text",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "note",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TEXT",
          "unique": false,
          "values": undefined,
        },
      ],
      "id": 2,
      "indices": [],
      "name": "invoice_lines",
      "x": 500,
      "y": 20,
    },
  ],
}
`;

exports[`SQL importer regression goldens > parses exported MySQL DDL identically 2`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_orders_user",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "PK",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "email",
          "notNull": true,
          "primary": false,
          "size": "255",
          "type": "VARCHAR",
          "unique": true,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "active",
          "id": 2,
          "increment": false,
          "name": "status",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "ENUM",
          "unique": false,
          "values": [
            "active",
            "banned",
          ],
        },
        {
          "check": "",
          "comment": "",
          "default": "CURRENT_TIMESTAMP",
          "id": 3,
          "increment": false,
          "name": "created",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
          "values": undefined,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "email",
          ],
          "id": 0,
          "name": "\`idx_email\`",
          "unique": true,
        },
      ],
      "name": "users",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "BIGINT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "user_id",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "INT",
          "unique": false,
          "values": undefined,
        },
        {
          "check": "",
          "comment": "money",
          "default": "0.00",
          "id": 2,
          "increment": false,
          "name": "amount",
          "notNull": false,
          "primary": false,
          "size": "12,2",
          "type": "DECIMAL",
          "unique": false,
          "values": undefined,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "orders",
      "x": 260,
      "y": 20,
    },
  ],
}
`;

exports[`SQL importer regression goldens > parses exported Oracle DDL identically 1`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "SET NULL",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_invoices_with_a_rather_long",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "NO ACTION",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "NO ACTION",
      "endFieldId": 1,
      "endTableId": 0,
      "id": 1,
      "name": "fk_invoice_customer_code",
      "startFieldId": 2,
      "startTableId": 1,
      "updateConstraint": "NO ACTION",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 1,
      "id": 2,
      "name": "fk_invoice_lines_invoices_with",
      "startFieldId": 0,
      "startTableId": 2,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "Customer's master",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "5",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "code",
          "notNull": true,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": true,
        },
        {
          "check": "",
          "comment": "Shown "as is"",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "display_name",
          "notNull": false,
          "primary": false,
          "size": "4000",
          "type": "VARCHAR2",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "bio",
          "notNull": false,
          "primary": false,
          "size": "255",
          "type": "VARCHAR2",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 4,
          "increment": false,
          "name": "avatar",
          "notNull": false,
          "primary": false,
          "size": "255",
          "type": "RAW",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 5,
          "increment": false,
          "name": "hash",
          "notNull": false,
          "primary": false,
          "size": "32",
          "type": "RAW",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 6,
          "increment": false,
          "name": "score",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "BINARY_DOUBLE",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 7,
          "increment": false,
          "name": "ratio",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "BINARY_FLOAT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 8,
          "increment": false,
          "name": "born_at",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 9,
          "increment": false,
          "name": "alarm",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 10,
          "increment": false,
          "name": "flag",
          "notNull": false,
          "primary": false,
          "size": "1",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 11,
          "increment": false,
          "name": "last_seen",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 12,
          "increment": false,
          "name": "legacy_id",
          "notNull": false,
          "primary": false,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 13,
          "increment": false,
          "name": "tier",
          "notNull": false,
          "primary": false,
          "size": "10",
          "type": "VARCHAR2",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 14,
          "increment": false,
          "name": "role",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "ROLE",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 15,
          "increment": false,
          "name": "doc",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "JSONB",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 16,
          "increment": false,
          "name": "balance",
          "notNull": false,
          "primary": false,
          "size": "10,0",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 17,
          "increment": false,
          "name": "since",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "YEAR",
          "unique": false,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "display_name",
            "born_at",
          ],
          "id": 0,
          "name": "idx_customers_name_born",
          "unique": false,
        },
        {
          "fields": [
            "hash",
          ],
          "id": 1,
          "name": "uq_customers_hash",
          "unique": true,
        },
      ],
      "name": "customers",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "customer_id",
          "notNull": true,
          "primary": false,
          "size": "5",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "customer_code",
          "notNull": false,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "total",
          "notNull": false,
          "primary": false,
          "size": "14,4",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 4,
          "increment": false,
          "name": "state",
          "notNull": false,
          "primary": false,
          "size": "20",
          "type": "VARCHAR2",
          "unique": false,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "invoices_with_a_rather_long_table_name",
      "x": 260,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": false,
          "name": "invoice_id",
          "notNull": true,
          "primary": true,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "line_no",
          "notNull": true,
          "primary": true,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "free text",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "note",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "CLOB",
          "unique": false,
        },
      ],
      "id": 2,
      "indices": [],
      "name": "invoice_lines",
      "x": 500,
      "y": 20,
    },
  ],
}
`;

exports[`SQL importer regression goldens > parses exported Oracle DDL identically 2`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_orders_user",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "Users table",
      "fields": [
        {
          "check": "",
          "comment": "PK",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "email",
          "notNull": true,
          "primary": false,
          "size": "255",
          "type": "VARCHAR2",
          "unique": true,
        },
        {
          "check": "",
          "comment": "",
          "default": "active",
          "id": 2,
          "increment": false,
          "name": "status",
          "notNull": true,
          "primary": false,
          "size": "10",
          "type": "VARCHAR2",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "CURRENT_TIMESTAMP",
          "id": 3,
          "increment": false,
          "name": "created",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "email",
          ],
          "id": 0,
          "name": "idx_email",
          "unique": true,
        },
      ],
      "name": "users",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "19",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "user_id",
          "notNull": true,
          "primary": false,
          "size": "10",
          "type": "NUMBER",
          "unique": false,
        },
        {
          "check": "",
          "comment": "money",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "amount",
          "notNull": false,
          "primary": false,
          "size": "12,2",
          "type": "NUMBER",
          "unique": false,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "orders",
      "x": 260,
      "y": 20,
    },
  ],
}
`;

exports[`SQL importer regression goldens > parses exported PostgreSQL DDL identically 1`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "SET NULL",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_invoices_with_a_rather_long_table_name_customers_1",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "RESTRICT",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "NO ACTION",
      "endFieldId": 1,
      "endTableId": 0,
      "id": 1,
      "name": "fk_invoice_customer_code",
      "startFieldId": 2,
      "startTableId": 1,
      "updateConstraint": "CASCADE",
    },
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 1,
      "id": 2,
      "name": "fk_invoice_lines_invoices_with_a_rather_long_table_name_3",
      "startFieldId": 0,
      "startTableId": 2,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "Customer's master",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "SMALLINT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "code",
          "notNull": true,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": true,
        },
        {
          "check": "",
          "comment": "Shown "as is"",
          "default": "O'Brien",
          "id": 2,
          "increment": false,
          "name": "display_name",
          "notNull": undefined,
          "primary": false,
          "size": "5000",
          "type": "VARCHAR",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "bio",
          "notNull": undefined,
          "primary": false,
          "size": "255",
          "type": "VARCHAR",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 4,
          "increment": false,
          "name": "avatar",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "BLOB",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 5,
          "increment": false,
          "name": "hash",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "BLOB",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "-1.5",
          "id": 6,
          "increment": false,
          "name": "score",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "DOUBLE",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 7,
          "increment": false,
          "name": "ratio",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "FLOAT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 8,
          "increment": false,
          "name": "born_at",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 9,
          "increment": false,
          "name": "alarm",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "TIME",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "false",
          "id": 10,
          "increment": false,
          "name": "flag",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "BOOLEAN",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "CURRENT_TIMESTAMP",
          "id": 11,
          "increment": false,
          "name": "last_seen",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "NULL",
          "id": 12,
          "increment": false,
          "name": "legacy_id",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "silver",
          "id": 13,
          "increment": false,
          "name": "tier",
          "notNull": false,
          "primary": false,
          "size": "",
          "type": "ENUM",
          "unique": false,
          "values": [
            "gold",
            "silver",
            "it's",
          ],
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 14,
          "increment": false,
          "name": "role",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "ENUM",
          "unique": false,
          "values": [
            "admin",
            "member",
          ],
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 15,
          "increment": false,
          "name": "doc",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "JSON",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 16,
          "increment": false,
          "name": "balance",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "DECIMAL",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 17,
          "increment": false,
          "name": "since",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "SMALLINT",
          "unique": false,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "display_name",
            "born_at",
          ],
          "id": 0,
          "name": "idx_customers_name_born",
          "unique": false,
        },
        {
          "fields": [
            "hash",
          ],
          "id": 1,
          "name": "uq_customers_hash",
          "unique": true,
        },
      ],
      "name": "customers",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "customer_id",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "SMALLINT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "customer_code",
          "notNull": undefined,
          "primary": false,
          "size": "8",
          "type": "CHAR",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 3,
          "increment": false,
          "name": "total",
          "notNull": undefined,
          "primary": false,
          "size": "14,4",
          "type": "DECIMAL",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "draft",
          "id": 4,
          "increment": false,
          "name": "state",
          "notNull": undefined,
          "primary": false,
          "size": "20",
          "type": "VARCHAR",
          "unique": false,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "invoices_with_a_rather_long_table_name",
      "x": 260,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": false,
          "name": "invoice_id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "line_no",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "free text",
          "default": "",
          "id": 2,
          "increment": false,
          "name": "note",
          "notNull": undefined,
          "primary": false,
          "size": "",
          "type": "TEXT",
          "unique": false,
        },
      ],
      "id": 2,
      "indices": [],
      "name": "invoice_lines",
      "x": 500,
      "y": 20,
    },
  ],
}
`;

exports[`SQL importer regression goldens > parses exported PostgreSQL DDL identically 2`] = `
{
  "relationships": [
    {
      "cardinality": "one_to_many",
      "deleteConstraint": "CASCADE",
      "endFieldId": 0,
      "endTableId": 0,
      "id": 0,
      "name": "fk_orders_user",
      "startFieldId": 1,
      "startTableId": 1,
      "updateConstraint": "NO ACTION",
    },
  ],
  "tables": [
    {
      "color": "#175e7a",
      "comment": "Users table",
      "fields": [
        {
          "check": "",
          "comment": "PK",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "email",
          "notNull": true,
          "primary": false,
          "size": "255",
          "type": "VARCHAR",
          "unique": true,
        },
        {
          "check": "",
          "comment": "",
          "default": "active",
          "id": 2,
          "increment": false,
          "name": "status",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "ENUM",
          "unique": false,
          "values": [
            "active",
            "banned",
          ],
        },
        {
          "check": "",
          "comment": "",
          "default": "CURRENT_TIMESTAMP",
          "id": 3,
          "increment": false,
          "name": "created",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "TIMESTAMP",
          "unique": false,
        },
      ],
      "id": 0,
      "indices": [
        {
          "fields": [
            "email",
          ],
          "id": 0,
          "name": "idx_email",
          "unique": true,
        },
      ],
      "name": "users",
      "x": 20,
      "y": 20,
    },
    {
      "color": "#175e7a",
      "comment": "",
      "fields": [
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 0,
          "increment": true,
          "name": "id",
          "notNull": true,
          "primary": true,
          "size": "",
          "type": "BIGINT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "",
          "default": "",
          "id": 1,
          "increment": false,
          "name": "user_id",
          "notNull": true,
          "primary": false,
          "size": "",
          "type": "INT",
          "unique": false,
        },
        {
          "check": "",
          "comment": "money",
          "default": "0.00",
          "id": 2,
          "increment": false,
          "name": "amount",
          "notNull": undefined,
          "primary": false,
          "size": "12,2",
          "type": "DECIMAL",
          "unique": false,
        },
      ],
      "id": 1,
      "indices": [],
      "name": "orders",
      "x": 260,
      "y": 20,
    },
  ],
}
`;
